--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,12 @@
             <artifactId>json</artifactId>
             <version>20200518</version>
         </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.10</version>
+        </dependency>
+
         <!--        <dependency>-->
         <!--            <groupId>org</groupId>-->
         <!--            <artifactId>json</artifactId>-->
