--- a/pom.xml
+++ b/pom.xml
@@ -28,12 +28,13 @@
             <artifactId>commons-codec</artifactId>
             <version>1.10</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.1.23</version>
+        </dependency>
 
-        <!--        <dependency>-->
-        <!--            <groupId>org</groupId>-->
-        <!--            <artifactId>json</artifactId>-->
-        <!--            <version>20</version>-->
-        <!--        </dependency>-->
+
     </dependencies>
 
 </project>
