--- a/pom.xml
+++ b/pom.xml
@@ -33,8 +33,12 @@
             <artifactId>fastjson</artifactId>
             <version>1.1.23</version>
         </dependency>
-
-
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
